# stm32f407vg-drivers-hal

./: README.md
Src/: main.c
abstraction/inc/: hw_gpio.h  hw_uart.h
abstraction/src/: hw_gpio.c  hw_uart.c
asm_lab/: register_test.s
drivers/GPIO/: gpio.c  gpio.h  stm32_gpio.c  stm32_gpio.h
drivers/I2C/: i2c.c  i2c.h  stm32_i2c.c
drivers/SPI/: spi.c
drivers/adc/: adc.c  adc.h
drivers/examples/: blink_ext_led.c  irq_btn_int_led_blink_ext_led.c  toggle_ext_led_ext_btn.c  toggle_int_led_btn.c
drivers/i2c/: i2c.c  i2c.h
drivers/inc/: i2c.h  spi.h  stm32f407g_disc1.h
drivers/include/: stm32f407g_disc1.h
drivers/src/: gpio.c  i2c.c
examples/SPI/: README.md  spi_btn_hello_world.c  spi_hello_world.c
examples/UART/: CMakeLists.txt  pico_uart_rx.c  stm32_uart_tx.c
examples/UART/stm32_pico_tx_rx/: pico_uart_tx_rx.c  stm32_uart_tx_rx  stm32_uart_tx_rx.c
misc/: README.md  arduino_spi_slave.c
